Implement tags functionality

--- a/_posts/2019-08-25-flock-report-2019.md
+++ b/_posts/2019-08-25-flock-report-2019.md
@@ -2,7 +2,7 @@
 layout: post
 title: Flock report 2019
 lang: en
-categories: copr fedora flock report modularity
+tags: copr fedora flock report modularity
 ---
 
 This year's [Flock][flock-to-fedora] is inevitably over, so the right thing to do now is to capture its best moments. This time, the conference
